feat: remove ability to create moderator/admin
