# internal/controllers/login/userRegister.post.go
@@ -12,9 +12,6 @@ import (
 // swagger:parameters registration
 // nolint:unused
 type registerParams struct {
-	// secret key to create user with protected role
-	// in: query
-	APIKey string `json:"api_key"`
 	// in: body
 	// required: true
 	Body domain.User `json:"user"`
@@ -50,7 +47,7 @@ func (c Login) Register(ctx cntrl.Context) error {
 		return fmt.Errorf("%v: %w", e, err)
 	}
 
-	err = c.userModel.Create(user, ctx.QueryParams().Get("api_key"))
+	err = c.userModel.Create(user)
 	if errors.Is(err, models.UsernameDuplicationErr) {
 		e := ctx.JSON(http.StatusConflict, cntrl.ErrorBody{Error: err.Error()})
 		return fmt.Errorf("%v: %w", e, err)
